just fixed the error in  the form validation

--- a/html/about.html
+++ b/html/about.html
@@ -25,11 +25,10 @@
     <nav id="mobile-menu">
       <div class="closeMenu" onclick="toggleMenu()">&times;</div>
       <ul class="menu-section">
+        <li class="item"><a href="index.html">Home</a></li>
         <li class="item"><a href="about.html">About</a></li>
           <li class="item"><a href="#program-area">Program</a></li>
-          <li class="item"><a href="#fearured-speaker">Join</a></li>
           <li class="item"><a href="#footer-wrapper">Sponsor</a></li>
-          <li class="item"><a href="#Last-textarea">News</a></li>
           <li class="item"><a class="header-cases" href="#">Cases</a></li>
       </ul>
     </nav>
