--- a/html/index.html
+++ b/html/index.html
@@ -23,11 +23,10 @@
     <nav id="mobile-menu">
       <li> <a class="closeMenu" onclick="toggleMenu()">&times;</a></li>
       <ul class="menu-section">
+        <li class="item"><a href="index.html">Home</a></li>
         <li class="item"><a href="about.html">About</a></li>
           <li class="item"><a href="#program-area">Program</a></li>
-          <li class="item"><a href="#fearured-speaker">Join</a></li>
           <li class="item"><a href="#footer-wrapper">Sponsor</a></li>
-          <li class="item"><a href="#">News</a></li>
           <li class="item"><a class="header-cases" href="#">Cases</a></li>
       </ul>
     </nav>
@@ -117,7 +116,6 @@
           <section class="feature-wrapper" id="feature-wrapper">
             <!-- Dynamic content for featured speakers will be added here -->
           </section>
-       g
       </section>
    <!--This is the footer area -->
 <div class="footer-wrapper" id="footer-wrapper">
