Removed node_modules folder

--- a/html/index.html
+++ b/html/index.html
@@ -143,6 +143,6 @@
     </span>
   </ul>
 </footer>
-<script src="../javascript.js"></script>
+<script src="../index.js"></script>
 </body>
 </html>
