created all the necessary requrement and made mobel see more on when the window loads

--- a/html/index.html
+++ b/html/index.html
@@ -26,6 +26,7 @@
         <li class="item"><a href="index.html">Home</a></li>
         <li class="item"><a href="about.html">About</a></li>
           <li class="item"><a href="#program-area">Program</a></li>
+          <li class="item"><a href="#fearured-speaker">Join</a></li>
           <li class="item"><a href="#footer-wrapper">Sponsor</a></li>
           <li class="item"><a class="header-cases" href="#">Cases</a></li>
       </ul>
@@ -48,61 +49,50 @@
             </span>
           </div>
         </section>
-        <section class="middle-wrapper">
-        <div class="main-ctontainer">
+        <div class="middle-wrapper">
             <section class="link-wrapper">
-              <a href="#">
+              <a href="#" class="first-div">
                 <div class="block-one">
                     <h2>Main Program</h2>
                     <hr>
                 </div>
             </a>
             <div class="program-area" id="program-area">
-                <a href="#">
                     <div class="block-two">
                       <img src="../images/program_icon_01 1.png">
                       <h3>Lecture</h3>
                       <p>Listen to the speakers from various countries about the messages of sharing and opening.</p>
                     </div>
-                </a>
-              <a href="#">
+      
                   <div class="block-two">
                     <img src="../images/program_icon_02 1.png">
                     <h3>CC Exhibition</h3>
                     <p>Listen to the speakers from various countries about the messages of sharing and opening.</p>
-                  </div>
-              </a>
-            <a href="#">
-                <div class="block-two">
+                  </div>            
+                  <div class="block-two">
                   <img src="../images/program_icon_03 1.png">
                   <h3>Forum</h3>
                   <p>Listen to the speakers from various countries about the messages of sharing and opening.</p>
                 </div>
-            </a>
-          <a href="#">
               <div class="block-two">
                 <img src="../images/program_icon_04 1.png">
                 <h3>Workshop</h3>
                 <p>Listen to the speakers from various countries about the messages of sharing and opening.</p>
               </div>
-            </a>
-            <a href="#">
                 <div class="block-two">
                   <img src="../images/program_icon_05 1.png">
                   <h3>CC Ignite</h3>
                   <p>Listen to the speakers from various countries about the messages of sharing and opening.</p>
                 </div>
-            </a>
         </div>
-        <a href="#" class="JBTN">
+        <div class="JBTN" id="join-linkBtn">
           <button class="join-blockBtn">
               <h2>Join HM Global Summit 2023</h2>
               <h3>SEE THE WHOLE PROGRAM</h3>
           </button>
-      </a>
-            </section>
         </div>
-      </section>
+            </section>
+          </div>
         </main>
         <div class="featured-section">
           <section class="link-wrapper">
@@ -117,6 +107,7 @@
             <!-- Dynamic content for featured speakers will be added here -->
           </section>
       </section>
+      <button href="" class="see-moreBtn">More <img src="../images/arrow_down 1.png"></button>
    <!--This is the footer area -->
 <div class="footer-wrapper" id="footer-wrapper">
 <span>
@@ -133,16 +124,14 @@
 </div>
   </div>
 </section>
-<footer>
-  <ul>
-    <h4>HAPPY DJ MUSIC GROUP&reg;</h4>
-    <span>
+<section class="about-footer" id="home-footer">
+  <h4>HAPPY DJ MUSIC GROUP&reg;</h4>
+    <div>
       <p>2023 happy dj music group all rights reserved</p>
       <h5>달리 정하지 않은 웹사이트의 모든 내용은 크리에이티브 커먼즈 저작자표시 2.0 대한민국 라이선스에 따라 이용할 수 있습니다.
         자세한 이용기능 내용과 허락조건은 http://creativecommons.org/licences/by/2.0/kr 를 보세요.</h5>
-    </span>
-  </ul>
-</footer>
+      </div>
+    </section>
 <script src="../index.js"></script>
 </body>
 </html>
