--- a/html/about.html
+++ b/html/about.html
@@ -28,6 +28,7 @@
         <li class="item"><a href="index.html">Home</a></li>
         <li class="item"><a href="about.html">About</a></li>
           <li class="item"><a href="#program-area">Program</a></li>
+          <li class="item"><a href="#shocase-wrapper">Join</a></li>
           <li class="item"><a href="#footer-wrapper">Sponsor</a></li>
           <li class="item"><a class="header-cases" href="#">Cases</a></li>
       </ul>
@@ -52,14 +53,14 @@
       <a href="#">ccsummit2015@cckorea.org</a>
   </div>
 </section>
-  <div class="middle-text">
-    <h3>Creative Commons Global Summit 2015 Logo</h3>
+  <div class="middle-text" id="creative-text">
+    <h3>Creative Commons Global Summit 2015 Music</h3>
     <hr>
     <h4>The logo of CC Global Summit 2015 was decided through the logo competition from 8, June to 7, July. After online public voting and Selection Committee’s judging process, the logo from Naresh Agrawal won the prize. After</h4>
 </div>
-<div class="middle-text">
+<div class="middle-text" id="Logo-area">
   <a href="#"><img src="../images/Mylogo (2).png"></a>
-<p>14th -17thOct 2023 | Lusaka Zambia</p>
+<li>14th -17thOct 2023 | Lusaka Zambia</li>
 </div>
 <div class="Last-textarea" id="Last-textarea">
   <h2>See the past CC Global Summits</h2>
@@ -93,16 +94,14 @@
   </div>
     </div>
 </section>
-<footer>
-  <ul  class="about-footer">
-    <h4>HAPPY DJ MUSIC GROUP&reg;</h4>
-    <span>
+<section class="about-footer">
+  <h4>HAPPY DJ MUSIC GROUP&reg;</h4>
+    <div>
       <p>2023 happy dj music group all rights reserved</p>
       <h5>달리 정하지 않은 웹사이트의 모든 내용은 크리에이티브 커먼즈 저작자표시 2.0 대한민국 라이선스에 따라 이용할 수 있습니다.
         자세한 이용기능 내용과 허락조건은 http://creativecommons.org/licences/by/2.0/kr 를 보세요.</h5>
-    </span>
-  </ul>
-</footer>
+      </div>
+    </section>
 <script src="../index.js"></script>
 </body>
 </html>
