fixed the errors the reviwer told me to fix

--- a/html/about.html
+++ b/html/about.html
@@ -94,7 +94,7 @@
   </div>
     </div>
 </section>
-<section class="about-footer">
+<section class="about-footer" id="about-footer">
   <h4>HAPPY DJ MUSIC GROUP&reg;</h4>
     <div>
       <p>2023 happy dj music group all rights reserved</p>
