--- a/html/index.html
+++ b/html/index.html
@@ -38,7 +38,7 @@
                 <h1>"HELLO! MUSIC WORLD"</h1>
                 <h2>CREATIVE MUSIC GLOBAL SUMMIT 2023</h2>
             </div>
-            <div class="text-area">
+            <div class="text-area" id="text-area">
               <p>
                 In graphic design, Lorem ipsum is a placeholder text
                 commonly used to demonstrate the visual form of a document
@@ -49,7 +49,7 @@
             </span>
           </div>
         </section>
-        <div class="middle-wrapper">
+        <div class="middle-wrapper" id="middle-wrapper">
             <section class="link-wrapper">
               <a href="#" class="first-div">
                 <div class="block-one">
@@ -64,7 +64,7 @@
                       <p>Listen to the speakers from various countries about the messages of sharing and opening.</p>
                     </div>
       
-                  <div class="block-two">
+                  <div class="block-two" id="block-two">
                     <img src="../images/program_icon_02 1.png">
                     <h3>CC Exhibition</h3>
                     <p>Listen to the speakers from various countries about the messages of sharing and opening.</p>
